--- a/Cashflow9000/packages.config
+++ b/Cashflow9000/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="monoandroid81" />
   <package id="TeixeiraSoftware.Finance.Currency" version="4.0.2" targetFramework="monoandroid81" />
   <package id="TeixeiraSoftware.Finance.Money" version="5.0.1" targetFramework="monoandroid81" />
 </packages>
