Added Milestone and Transaction Adapters. Fixed DB relationship loading. Finished logic implementation in TransactionActivity and MilestoneActivity.

--- a/Cashflow9000/Cashflow9000.csproj
+++ b/Cashflow9000/Cashflow9000.csproj
@@ -85,6 +85,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Adapters\CategoryAdapter.cs" />
+    <Compile Include="Adapters\MilestoneAdapter.cs" />
+    <Compile Include="Adapters\TransactionAdapter.cs" />
     <Compile Include="CashflowData.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Milestone.cs" />
