Added Milestone and Transaction Adapters. Fixed DB relationship loading. Finished logic implementation in TransactionActivity and MilestoneActivity.

--- a/Cashflow9000/Cashflow9000.csproj
+++ b/Cashflow9000/Cashflow9000.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Adapters\MilestoneAdapter.cs" />
     <Compile Include="Adapters\TransactionAdapter.cs" />
     <Compile Include="CashflowData.cs" />
+    <Compile Include="Models\Budget.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Milestone.cs" />
     <Compile Include="Views\EditCurrency.cs" />
