--- a/Cashflow9000/Cashflow9000.csproj
+++ b/Cashflow9000/Cashflow9000.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Adapters\BudgetAdapter.cs" />
     <Compile Include="Adapters\CategoryAdapter.cs" />
     <Compile Include="Adapters\MilestoneAdapter.cs" />
+    <Compile Include="Adapters\PlannedTransactionAdapter.cs" />
     <Compile Include="Adapters\RecurrenceAdapter.cs" />
     <Compile Include="Adapters\TransactionAdapter.cs" />
     <Compile Include="Adapters\TransactionTypeAdapter.cs" />
@@ -95,14 +96,17 @@
     <Compile Include="CashflowData.cs" />
     <Compile Include="CategoryActivity.cs" />
     <Compile Include="CategoryListActivity.cs" />
-    <Compile Include="Fragments\IModelListener.cs" />
+    <Compile Include="Fragments\PlannedTransactionFragment.cs" />
     <Compile Include="Fragments\TransactionFragment.cs" />
+    <Compile Include="Fragments\ListFragment.cs" />
     <Compile Include="LayoutId.cs" />
     <Compile Include="MilestoneListActivity.cs" />
     <Compile Include="Models\Budget.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Milestone.cs" />
+    <Compile Include="Models\PlannedTransaction.cs" />
     <Compile Include="Models\Recurrence.cs" />
+    <Compile Include="PlannedTransactionActivity.cs" />
     <Compile Include="TransactionListActivity.cs" />
     <Compile Include="Views\EditCurrency.cs" />
     <Compile Include="MainActivity.cs" />
@@ -111,6 +115,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\Transaction.cs" />
     <Compile Include="TransactionActivity.cs" />
+    <Compile Include="PlannedTransactionListActivity.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -133,15 +138,21 @@
     <AndroidResource Include="Resources\layout\Budget.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
+    <AndroidResource Include="Resources\layout\ModelList.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\Main.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
-    <AndroidResource Include="Resources\values\Strings.xml" />
+    <AndroidResource Include="Resources\values\Strings.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
+    <Folder Include="Resources\layout-large\" />
     <Folder Include="Resources\mipmap-hdpi\" />
     <Folder Include="Resources\mipmap-mdpi\" />
     <Folder Include="Resources\mipmap-xhdpi\" />
