--- a/Cashflow9000/Cashflow9000.csproj
+++ b/Cashflow9000/Cashflow9000.csproj
@@ -97,6 +97,7 @@
     <Compile Include="CategoryActivity.cs" />
     <Compile Include="CategoryListActivity.cs" />
     <Compile Include="Fragments\BudgetFragment.cs" />
+    <Compile Include="Fragments\BudgetHeaderFragment.cs" />
     <Compile Include="Fragments\CategoryFragment.cs" />
     <Compile Include="Fragments\MilestoneFragment.cs" />
     <Compile Include="Fragments\PlannedTransactionFragment.cs" />
@@ -113,6 +114,7 @@
     <Compile Include="Models\Recurrence.cs" />
     <Compile Include="PlannedTransactionActivity.cs" />
     <Compile Include="TransactionListActivity.cs" />
+    <Compile Include="Views\DatePicker.cs" />
     <Compile Include="Views\EditCurrency.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="MilestoneActivity.cs" />
