Refactored and added the ability to delete all types.

--- a/Cashflow9000/Cashflow9000.csproj
+++ b/Cashflow9000/Cashflow9000.csproj
@@ -99,7 +99,8 @@
     <Compile Include="Fragments\BudgetFragment.cs" />
     <Compile Include="Fragments\BudgetHeaderFragment.cs" />
     <Compile Include="Fragments\CategoryFragment.cs" />
-    <Compile Include="Fragments\DeleteHandlerFragment.cs" />
+    <Compile Include="Fragments\ItemHandlerFragment.cs" />
+    <Compile Include="Fragments\IItemFragmentListener.cs" />
     <Compile Include="Fragments\MilestoneFragment.cs" />
     <Compile Include="Fragments\PlannedTransactionFragment.cs" />
     <Compile Include="Fragments\TransactionFragment.cs" />
